<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff35f3ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:id="@+id/locationText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/locationText"
        android:layout_toStartOf="@+id/locationText"
        android:layout_marginTop="36dp"
        android:background="#fff6f7ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature_text"
        android:id="@+id/temperatureText"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="31dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_text"
        android:id="@+id/windText"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloud_text"
        android:id="@+id/cloudText"
        android:layout_below="@+id/windText"
        android:layout_alignStart="@+id/windText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_text"
        android:id="@+id/pressureText"
        android:layout_below="@+id/cloudText"
        android:layout_alignStart="@+id/cloudText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_text"
        android:id="@+id/humidityText"
        android:layout_below="@+id/pressureText"
        android:layout_alignStart="@+id/pressureText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sunrise"
        android:id="@+id/sunrise_Text"
        android:layout_below="@+id/humidityText"
        android:layout_alignStart="@+id/humidityText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sunset"
        android:id="@+id/sunset_text"
        android:layout_below="@+id/sunrise_Text"
        android:layout_alignStart="@+id/sunrise_Text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_text"
        android:id="@+id/updateText"
        android:layout_below="@+id/sunset_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />
</RelativeLayout>
